Mon Feb  9 22:22:19 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellview.c (gtk_cell_view_cell_layout_clear_attributes): 
	Ugh. Don't try to free ints, even if they're stored in pointers.

2004-02-09  Federico Mena Quintero  <federico@ximian.com>

	Fix #132256.

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_get_paths): Read the contents of the
	filename entry in both OPEN and SAVE mode.  In multiple-selection
	mode, add this to the selection from the file/folder list.
	(struct get_paths_closure): Add a path_from_entry field.
	(get_paths_foreach): Only add the iterated path if it is not the
	same as the path from the entry.

2004-02-09  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilesystemunix.c (gtk_file_system_unix_get_folder): If
	the folder is already open, add the requested info types to it.

Sun Feb  8 01:28:02 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtkcombobox.c (gtk_combo_box_set_popup_widget): Add appropriate
	type casts for the gtk_window_set_screen() call.

Sun Feb  8 01:44:06 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_set_popup_widget): Make popups 
	come up on the same screen as the combo box.  (#133544, 
	Morten Welinder)

Fri Feb  6 23:40:24 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (create_file_list): clean up the
	packing of the file selector.

Sat Feb  7 01:21:09 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreemodel.c (gtk_tree_model_base_init): Don't use function 
	calls in array initializers, as some compilers seem to hate this.
	(#133216, Jonas Jonsson)

Sat Feb  7 00:06:44 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkaccelmap.[hc]: Add change notification for GtkAccelMap,
	by on-demand instantiating a singleton object with a "changed" 
	signal. 

	* gtk/gtkmarshalers.list (VOID:STRING,UINT,FLAGS): Add marshaller
	for GtkAccelMap::changed.

Fri Feb  6 23:08:29 2004  Matthias Clasen  <maclas@gmx.de>
